Increase profile pic size on account page only

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -445,6 +445,11 @@ button:hover {
     /* Subtle shadow */
 }
 
+.account-container .profile-pic {
+    width: 150px;
+    height: 150px;
+}
+
 /* Desktop menu */
 .menu {
     display: flex;
