Increase profile picture size on account page only

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -445,9 +445,9 @@ button:hover {
     /* Subtle shadow */
 }
 
-.account-container .profile-pic {
-    width: 150px;
-    height: 150px;
+.account-container .profile-container .profile-pic {
+    width: 150px !important;
+    height: 150px !important;
 }
 
 /* Desktop menu */
