--- a/frontend/style.css
+++ b/frontend/style.css
@@ -448,6 +448,7 @@ button:hover {
 .account-container .profile-container .profile-pic {
     width: 150px !important;
     height: 150px !important;
+    flex-shrink: 0;
 }
 
 /* Desktop menu */
@@ -1843,8 +1844,6 @@ footer .footer-links a:hover {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    max-width: 200px;
-    /* Restrict width */
 }
 
 .profile-pic {
